--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -16,7 +16,9 @@
             <% end %>
           </td>
           <td><%= link_to @book.title, @book %></td>
+          <td>コメント数: <%= @book.book_comments.count %></td>
           <td><%= @book.body %></td>
+          <td><%= render "favorites/btn", book: @book %></td>
             <td>
             <% if @book.user == current_user %>
               <%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
@@ -27,6 +29,8 @@
             <% end %>
         </tr>
       </table>
+      <%= render "book_comments/index", book: @book %>
+      <%= render "book_comments/form", book: @book, book_comment: @book_comment %>
     </div>
   </div>
 </div>
