--- a/app/views/favorites/_btn.html.erb
+++ b/app/views/favorites/_btn.html.erb
@@ -1,5 +1,5 @@
 <% if book.favorited_by?(current_user) %>
-    <%= link_to book_favorites_path(book.id), method: :delete do %>
+    <%= link_to book_favorite_path(book, book.id), method: :delete do %>
     <i class="fas fa-heart" aria-hidden="true" style="color: red;"></i>
     <%= book.favorites.count %> いいね
     <% end %>
