--- a/app/views/groups/_index.html.erb
+++ b/app/views/groups/_index.html.erb
@@ -7,3 +7,24 @@
       <th colspan="3"></th>
     </tr>
   </thead>
+  <tbody>
+    <% groups.each do |group| %>
+      <tr>
+        <td><%= link_to(group.owner) do %>
+          <%= image_tag group.owner.get_profile_image, size:'50x50' %>
+          <% end %>
+        </td>
+        <td><%= link_to group.name,group %></td>
+        <td><%= group.introduction %></td>
+        
+        <td>
+          <% if group.owner == current_user %>
+            <%= link_to 'Edit', edit_group_path(group) %>
+          <% else %>
+            <%= button_to 'Join this group', group_memberships_path(group_id: group.id), method: :post %>
+          <% end %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
