--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,6 +1,16 @@
-<% @groups.each do |group| %>
-  <%= group.name %>
-  <% if group.owner == current_user %>
-    <%= link_to 'Edit', edit_group_path(group) %>
-  <% end %>
-<% end %>
+<div class='container px-5 px-sm-0'>
+  <div class='row'>
+    <div class='col-md-3'>
+    <h2>User info</h2>
+    <%= render 'users/info', user: current_user %>
+
+    <h2 class="mt-3">New book</h2>
+    <%= render 'books/form', book: @book %>
+    </div>
+
+    <div class='col-md-8 offset-md-1'>
+      <h2>Groups</h2>
+      <%= render 'index', groups: @groups%>
+    </div>
+  </div>
+</div>
