--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -1,5 +1,20 @@
-<%= form_with(model: @group) do |f| %>
-  <%= f.label :name, 'グループ名' %>
-  <%= f.text_field :name %>
-  <%= f.submit '作成' %>
+<%= form_with(model: @group, local: true, html: { multipart: true }) do |f| %>
+  <div>
+    <%= f.label :name, 'グループ名' %><br>
+    <%= f.text_field :name %>
+  </div>
+
+  <div>
+    <%= f.label :introduction, '紹介文' %><br>
+    <%= f.text_area :introduction %>
+  </div>
+
+  <div>
+    <%= f.label :profile_image, 'グループ画像' %><br>
+    <%= f.file_field :profile_image %>
+  </div>
+
+  <div>
+    <%= f.submit 'Create Group' %>
+  </div>
 <% end %>
